set overflow to hidden earlier and this hid category selection, so fixed bug

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,7 +62,6 @@ img {
 
 .input-field {
 	background-color: #FFF7ED;
-	overflow: hidden;
 }
 
 .card-panel {
